# cifra-cesar

./: Makefile  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: continuous_integration.yml
cifra_cesar/: cesar.py  cli.py
docs/: index.md
tests/: test_encripta.py
