[tool.poetry]
name = "cifra-cesar"
version = "0.1.0"
description = "Implementação da Cifra de César."
authors = ["Kaio Rocha <kaiodtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
blue = "^0.9.1"
mkdocs = "^1.5.3"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
